fix header li vert spacing to allow proportionate scaling when horizontal arrangement collapses at low end of 768px breakpoint

--- a/crs201/company_site/assets/styles/responsive_style.css
+++ b/crs201/company_site/assets/styles/responsive_style.css
@@ -104,6 +104,7 @@ figcaption > h3 {
 }
 
 figure {
+  max-width: 1000px;
   padding: 0 0 10px;
   margin: 0;
 }
@@ -132,7 +133,7 @@ article.projects:nth-of-type(0n + 3) {
 }
 
 .projects img {
-  width: 940px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -140,6 +141,7 @@ article.projects:nth-of-type(0n + 3) {
 .projects:nth-of-type(0n + 2) figure {
   padding-bottom: 50px;
   border-bottom: .5px solid lightgrey;
+
 }
 
 .projects h3 {
@@ -236,7 +238,12 @@ a#instagram::before {
 
   nav li {
     display: inline-block;
-    margin: 2px 42.5px 24px;
+    margin: 2px 42.5px 0;
+  }
+
+  nav li:nth-of-type(0n + 3) {
+    display: inline-block;
+    margin: 1px 42.5px 24px;
   }
 
 /* main: 768 break */
@@ -257,15 +264,34 @@ article.projects {
 }
 
 .projects p {
-  margin: 0 30px;
+  margin: 0;
 }
 
-.projects img {
-  height: auto;
-  width: 562px;
+.projects figure {
+  max-width: 692px;
   margin: 0 auto;
 }
 
+.projects img {
+  display: block;
+  width: 100%;
+}
+
+.projects h3 {
+  margin: 44px 0 24px;
+}
+
+.projects:nth-of-type(0n + 1) figure,
+.projects:nth-of-type(0n + 2) figure {
+  border-bottom: none;
+}
+
+.projects:nth-of-type(0n + 1),
+.projects:nth-of-type(0n + 2) {
+  border-bottom: .5px solid lightgrey;
+}
+
+  
 /* footer: 768 break  */
 
   .social {
